--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <meta http-equiv="refresh" content="0;url=LwMeet.html">
 </head>
 <body>
-    <p>Redirection en cours...</p>
+    <p>There you are</p>
 </body>
 </html>
