--- a/LWMeetTalk.html
+++ b/LWMeetTalk.html
@@ -13,7 +13,7 @@
         </div>
         <button id="next-message-btn">Message suivant</button>
         <audio id="background-music" src="terror.ogg" type="audio/ogg" loop></audio>
-        <audio id="phoneGone" src="phoneGone.mp3" type="audio/ogg" loop></audio>
+        <audio id="phoneGone" src="phoneOff.ogg" type="audio/ogg" loop></audio>
         <div class="screamer" id="screamer">
             <img src="Screamer.jpeg" alt="screamer" id="screamerImage" style="display: none;"/>
             <audio id="screamerSound" src="screamer.ogg" type="audio/ogg"></audio>
