--- a/LWMeetConclusion.html
+++ b/LWMeetConclusion.html
@@ -19,7 +19,7 @@
     <audio id="loopSong" src="dialLoop.ogg" loop type="audio/ogg"></audio>
     <video
       id="toBeContinued"
-      src="ToBeContinuedLWMeet.mp4"
+      src="ToBeContinuedWeb.mp4"
       type="video/mp4"
       style="display: none"
     ></video>
